[DE] z-index correction

--- a/apps/common/main/resources/less/synchronize-tip.less
+++ b/apps/common/main/resources/less/synchronize-tip.less
@@ -1,6 +1,6 @@
 .synch-tip-root {
     position: absolute;
-    z-index: @zindex-tooltip + 5;
+    z-index: @zindex-navbar + 2;
     width: 300px;
 
     .tip-arrow {
